--- a/src/scss/overrides.scss
+++ b/src/scss/overrides.scss
@@ -11,18 +11,14 @@ html {
 	font-size: 16px;
 }
 
-main {
-	margin-top: 3.5em;
-}
-
 .logo {
-	margin: 4.500em auto;
+	margin: 8em auto 4.5em auto;
 	height: auto;
 
 	@media all and (max-width: 600px) {
 		max-height: 6.250em;
 		min-height: 0;
-		margin: 1em auto;
+		margin: 5em auto;
 	}
 }
 
@@ -30,7 +26,7 @@ div.module.content {
 	background-color: rgba(255, 255, 255, 0.8);
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 	height: 18.750em;
-	padding: 3.125em 0;
+	padding: 1em 0;
 }
 
 .footer {
